Localize Kafka's external_confirm_s bottleneck to a single stalled RPC
Closes the last open item from the Kafka RTO investigation
(testing-strategy-ha-supplement.md). Both of Chat's ordered candidates
for the 4-15s controller-killed external-visibility gap are refuted
with direct live/archived evidence rather than assumption: ISR
catch-up lag doesn't exist (the target partition's handoff happens
instantly, pre-death, via the dying broker's own graceful SIGTERM
shutdown) and GC-pause noise is absent (zero GC events during an
11.7s gap, verified against a broker whose GC logging is confirmed
working). A third, bounded round -- checking AdminClient's own
client-side retry/backoff, greenlit because the shape matched this
investigation's own already-proven "test-harness cost wearing a Kafka
mechanism costume" bug pattern -- found something more precise than
either: no retry loop exists, but a single ListPartitionReassignments
RPC to the newly-active controller stalls for many seconds while
every other request type resolves in milliseconds, accounting for
74-83% of the measured delay across two independent live trials.
Mechanism precisely localized; why that one request type stalls is a
KRaft-controller-internals question one level deeper, explicitly out
of this round's bounded scope.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_014NXViidH5rnWPdpnauHRqK